bugfix user-preferences and inbox modals
modals appear behind navbar on mobile

--- a/public/scss/modal.scss
+++ b/public/scss/modal.scss
@@ -56,3 +56,7 @@
     color: $validation-red;
   }
 }
+
+#inbox-modal, #user-preferences-modal {
+  position: fixed;
+}
